
noinst_LIBRARIES = libtwin_demos.a

libtwin_demos_a_CFLAGS = @WARN_CFLAGS@
libtwin_demos_a_CPPFLAGS = -I$(top_srcdir)
libtwin_demos_a_SOURCES = twin_calc.c twin_calc.h \
	twin_clock.c twin_clock.h \
	twin_demo.c twin_demo.h \
	twin_demoline.c twin_demoline.h \
	twin_demospline.c twin_demospline.h \
	twin_hello.c twin_hello.h \
	twin_text.c twin_text.h

